syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.dcache.nfs.bep";
option java_outer_classname = "NfsBackendProto";
option objc_class_prefix = "BEP";

package pnfs;

service DataServerBepService {
    rpc SetFileSize (SetFileSizeRequest) returns (SetFileSizeResponse) {}
    rpc removeFile (RemoveFileRequest) returns (RemoveFileResponse) {}
}

message SetFileSizeRequest {
    bytes fh = 1;
    uint64 size = 2;
}

message SetFileSizeResponse {
    uint32 status = 1;
}

message RemoveFileRequest {
    bytes fh = 1;
}

message RemoveFileResponse {
    uint32 status = 1;
}
